syntax = "proto3";
package com.yi.day7.proto;

option java_package = "com.yi.day7.proto";
option java_outer_classname = "MessageProto";

/*消息类型*/
enum HeadType {
  LOGIN_REQUEST = 0; // 登录请求
  LOGIN_RESPONSE = 1; // 登录响应
  LOGOUT_REQUEST = 2; // 注销请求
  LOGOUT_RESPONSE = 3; // 注销响应
  KEEPALIVE_REQUEST = 4; // 心跳请求
  KEEPALIVE_RESPONSE = 5; // 心跳响应
  MESSAGE_REQUEST = 6; // 聊天消息请求
  MESSAGE_RESPONSE = 7; // 聊天消息响应
  MESSAGE_NOTIFICATION = 8; // 服务器通知
}

/*登录请求消息*/
message LoginRequest {
  string uid = 1; // 用户 id
  string deviceId = 2; // 设备 id
  string token = 3; // 用户 token
  uint32 platform = 4; // 客户端平台 windows、mac、android、ios、web
  string appVersion = 5; // app version
}

/*登录响应消息*/
message LoginResponse {
  bool result = 1;
  uint32 code = 2;
  string info = 3;
  uint32 expose = 4;
}

/*聊天请求信息*/
message MessageRequest {
  uint64 msgId = 1;
  string form = 2;
  string to = 3;
  uint64 time = 4;
  uint32 msgType = 5;
  string content = 6;
  string url = 8;
  string property = 9;
  string fromNick = 10;
  string json = 11;
}

/*聊天响应信息*/
message MessageResponse {
  bool result = 1;
  uint32 code = 2;
  string info = 3;
  uint32 expose = 4;
  bool lastBlock = 5;
  fixed32 blockIndex = 6;
}

/*通知信息*/
message MessageNotification {
  uint32 msgType = 1;
  bytes sender = 2;
  string json = 3;
  string timestamp = 4;
}

/*外层消息*/
message Message {
  HeadType type = 1;
  uint64 sequence = 2;
  string sessionId = 3;

  LoginRequest request = 4;
  LoginResponse response = 5;
  MessageRequest messageRequest = 6;
  MessageResponse messageResponse = 7;
  MessageNotification notification = 8;
}
